--- a/lecture_notes/lecture_3.tex
+++ b/lecture_notes/lecture_3.tex
@@ -152,7 +152,7 @@ thick,minimum size=1mm,line width=1pt,>=stealth]  % continuous  node
 \item{2} Conditional probability.
 \item{3} Chain rule.
 \item{4} Bayes Theorem.
-\item{5} Random Variables.
+\item{5} Random Variables (Overview).
 \end{description}
 }
 
